--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(cp)
 export(cpboundary)
 export(cpstop)
 export(fourhr)
+export(gmatrix)
 export(hxbeta)
 export(innercov)
 export(innervar)
@@ -38,11 +39,13 @@ export(rpwe)
 export(rpwecx)
 export(rpwu)
 export(spf)
+export(tbase)
 export(wlrcal)
 export(wlrcom)
 export(wlrutil)
+
 #export(solveabc)
-import("survival")
+import("survival","splines","splines2")
 importFrom("stats", "pnorm", "qnorm", "rbinom", "runif", "residuals", "rnorm", "dbeta")
 
 
