Corrected typos "rate51" in overallcovp1.R, overallcovp2.R, mc.overallcovp1.r and mc.overallcovp2.r

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@ export(cp)
 export(cpboundary)
 export(cpstop)
 export(fourhr)
-export(gmatrix)
 export(hxbeta)
 export(innercov)
 export(innervar)
@@ -39,13 +38,29 @@ export(rpwe)
 export(rpwecx)
 export(rpwu)
 export(spf)
-export(tbase)
 export(wlrcal)
 export(wlrcom)
 export(wlrutil)
 
+export(btrany)
+export(gmatrix)
+
+export(mc.fun1)
+export(mc.inf)
+export(mc.innervar)
+export(mc.innercov)
+export(mc.overallcovp1)
+export(mc.overallcovp2)
+export(mc.overallcov)
+export(mc.xdenom)
+export(surv.to.logistic)
+export(tbase)
+export(trany)
+
+
 #export(solveabc)
 import("survival","splines","splines2")
 importFrom("stats", "pnorm", "qnorm", "rbinom", "runif", "residuals", "rnorm", "dbeta")
+importFrom("stats", "pgamma", "qgamma")
 
 
